# yapi-auto-script

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  main.py  pyproject.toml  server.py
config/: http_config.ini
interface/: confighttp.py  globalconfig.py
utils/: util.py
