[tool.poetry]
name = "yapi_auto"
version = "0.1.0"
description = ""
authors = ["孙进森 <sunjinsen@shouqianba.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
